--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,10 @@
 
 /* Your CSS Code here. */
+blockquote{
+	max-width:600px;
+	margin:10px;
+	background-color:#f8fffe;
+	padding:15px;
+	border-left:8px solid green;
+	font-weight:bold;
+}
